[gd_scene load_steps=16 format=3 uid="uid://dgxjwwhoh2r7o"]

[ext_resource type="Script" path="res://interface/game_ui/job_ui/script.gd" id="1_v0wsc"]
[ext_resource type="Texture2D" uid="uid://cfhv5pbqih310" path="res://asset/Miscellaneous/ui/flag.png" id="2_30mui"]
[ext_resource type="Texture2D" uid="uid://dl7uttst5v6nc" path="res://asset/Miscellaneous/ui/flag_hover.png" id="3_abq5x"]
[ext_resource type="Texture2D" uid="uid://bmlkcl3c4oxsq" path="res://asset/Miscellaneous/ui/flag_disabled.png" id="4_mikj2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yurt7"]
bg_color = Color(1, 1, 1, 0.478431)

[sub_resource type="Theme" id="Theme_xcs2k"]

[sub_resource type="LabelSettings" id="LabelSettings_0e4vv"]
line_spacing = 10.0
font_size = 19
font_color = Color(0, 0, 0, 0.662745)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_njfov"]
texture = ExtResource("2_30mui")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eegv0"]
texture = ExtResource("3_abq5x")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_av7np"]
texture = ExtResource("4_mikj2")

[sub_resource type="LabelSettings" id="LabelSettings_r7ckp"]
line_spacing = 2.0
font_size = 14
font_color = Color(0, 0, 0, 0.74902)

[sub_resource type="LabelSettings" id="LabelSettings_vfa8a"]
font_size = 10
font_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_but02"]
bg_color = Color(0.784314, 0.294118, 0.207843, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1ih7m"]
font_size = 9
font_color = Color(0.00392157, 0.00392157, 0.00392157, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_ca1nn"]
font_size = 9
font_color = Color(0, 0, 0, 0.588235)

[node name="JobInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v0wsc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yurt7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -165.0
offset_right = 490.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_xcs2k")
text = "Choose your path!"
label_settings = SubResource("LabelSettings_0e4vv")
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Mage" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 450)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Mage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_njfov")
theme_override_styles/hover = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/disabled = SubResource("StyleBoxTexture_av7np")
theme_override_styles/focus = SubResource("StyleBoxTexture_eegv0")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Mage/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Mage/Button/VBoxContainer"]
layout_mode = 2
text = "Mage"
label_settings = SubResource("LabelSettings_r7ckp")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Mage/Button/VBoxContainer"]
layout_mode = 2
text = "A magic caster that rely on Intelligence and dexterity. Mages do not have any weapons but starts with Soul Strike."
label_settings = SubResource("LabelSettings_vfa8a")
autowrap_mode = 2

[node name="Separator" type="Panel" parent="VBoxContainer/HBoxContainer/Mage/Button/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_but02")

[node name="SoulStrike" type="Label" parent="VBoxContainer/HBoxContainer/Mage/Button/VBoxContainer"]
layout_mode = 2
text = "Soul Strike (5 lvl):
Fire to up to 10 ghost bolts dealing 30% of your matk each."
label_settings = SubResource("LabelSettings_1ih7m")
autowrap_mode = 2

[node name="Fire Wall" type="Label" parent="VBoxContainer/HBoxContainer/Mage/Button/VBoxContainer"]
layout_mode = 2
text = "Fire Wall(10 lvl):
Cast a wall wich repel enemeies up to 5 times per lvl"
label_settings = SubResource("LabelSettings_1ih7m")
autowrap_mode = 2

[node name="Thief" type="Control" parent="VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 300)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Thief"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_njfov")
theme_override_styles/hover = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/disabled = SubResource("StyleBoxTexture_av7np")
theme_override_styles/focus = SubResource("StyleBoxTexture_eegv0")
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Thief/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Thief/Button/VBoxContainer"]
layout_mode = 2
text = "WIP: Thief"
label_settings = SubResource("LabelSettings_r7ckp")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Thief/Button/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_vfa8a")
autowrap_mode = 2

[node name="Swordman" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 300)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Swordman"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_njfov")
theme_override_styles/hover = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/disabled = SubResource("StyleBoxTexture_av7np")
theme_override_styles/focus = SubResource("StyleBoxTexture_eegv0")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Swordman/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Swordman/Button/VBoxContainer"]
layout_mode = 2
text = "Swordman"
label_settings = SubResource("LabelSettings_r7ckp")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Swordman/Button/VBoxContainer"]
layout_mode = 2
text = "A powerfull warrior that rely on strength and vitality to go through fights."
label_settings = SubResource("LabelSettings_vfa8a")
autowrap_mode = 2

[node name="Separator" type="Panel" parent="VBoxContainer/HBoxContainer/Swordman/Button/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_but02")

[node name="Increased Recovery" type="Label" parent="VBoxContainer/HBoxContainer/Swordman/Button/VBoxContainer"]
layout_mode = 2
text = "Increased Recovery (5 lvl):
Heals yourself every 4 seconds. Healing is Increased by vitality."
label_settings = SubResource("LabelSettings_1ih7m")
autowrap_mode = 2

[node name="Endure" type="Label" parent="VBoxContainer/HBoxContainer/Swordman/Button/VBoxContainer"]
layout_mode = 2
text = "Endure (10 lvl):
Allow you to power through hits for 5 seconds. 1 second less downtime per lvl. Lvl 10 makes it permanent"
label_settings = SubResource("LabelSettings_1ih7m")
autowrap_mode = 2

[node name="Archer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 300)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Archer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_njfov")
theme_override_styles/hover = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/disabled = SubResource("StyleBoxTexture_av7np")
theme_override_styles/focus = SubResource("StyleBoxTexture_eegv0")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Archer/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Archer/Button/VBoxContainer"]
layout_mode = 2
text = "Archer"
label_settings = SubResource("LabelSettings_r7ckp")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Archer/Button/VBoxContainer"]
layout_mode = 2
text = "A range fighter wich use a bow to fight. The main damage stat is dexterity."
label_settings = SubResource("LabelSettings_vfa8a")
autowrap_mode = 2

[node name="Separator" type="Panel" parent="VBoxContainer/HBoxContainer/Archer/Button/VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_but02")

[node name="Pierce Arrow" type="Label" parent="VBoxContainer/HBoxContainer/Archer/Button/VBoxContainer"]
layout_mode = 2
text = "Pierces arrow (5 lvl):
Have 20% chance to pierce 1 target per level."
label_settings = SubResource("LabelSettings_1ih7m")
autowrap_mode = 2

[node name="Owl\'s Eye" type="Label" parent="VBoxContainer/HBoxContainer/Archer/Button/VBoxContainer"]
layout_mode = 2
text = "Owl's eye (10 lvl):
Improve your range by 5% per lvl"
label_settings = SubResource("LabelSettings_ca1nn")
autowrap_mode = 2

[node name="Acolyte" type="Control" parent="VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 300)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Acolyte"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_njfov")
theme_override_styles/hover = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/disabled = SubResource("StyleBoxTexture_av7np")
theme_override_styles/focus = SubResource("StyleBoxTexture_eegv0")
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Acolyte/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Acolyte/Button/VBoxContainer"]
layout_mode = 2
text = "WIP: Acolyte"
label_settings = SubResource("LabelSettings_r7ckp")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Acolyte/Button/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_vfa8a")
autowrap_mode = 2

[node name="Merchant" type="Control" parent="VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(150, 300)
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/Merchant"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_njfov")
theme_override_styles/hover = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_eegv0")
theme_override_styles/disabled = SubResource("StyleBoxTexture_av7np")
theme_override_styles/focus = SubResource("StyleBoxTexture_eegv0")
disabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Merchant/Button"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_right = -15.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="VBoxContainer/HBoxContainer/Merchant/Button/VBoxContainer"]
layout_mode = 2
text = "WIP: Merchant"
label_settings = SubResource("LabelSettings_r7ckp")
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer/HBoxContainer/Merchant/Button/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_vfa8a")
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Mage/Button" to="." method="_on_mage_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Thief/Button" to="." method="_on_thief_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Swordman/Button" to="." method="_on_swordman_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Archer/Button" to="." method="_on_archer_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Acolyte/Button" to="." method="_on_acolyte_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Merchant/Button" to="." method="_on_merchant_btn_pressed"]
